--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   flutter_rating_bar: ^4.0.0
   firebase_core: ^1.12.0
   firebase_messaging: ^11.2.6
+  google_sign_in: ^5.2.4
   package_info_plus: ^1.4.0
   shared_preferences: ^2.0.13
 
