--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   google_sign_in: ^5.2.4
   package_info_plus: ^1.4.0
   shared_preferences: ^2.0.13
+  flutter_facebook_auth: ^4.1.2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
