--- a/ios/Podfile
+++ b/ios/Podfile
@@ -55,6 +55,7 @@ post_install do |installer|
         ## dart: PermissionGroup.mediaLibrary
         'PERMISSION_MEDIA_LIBRARY=1',
       ]
+      config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '11.0'
     end
   end
 end
