--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,7 +31,6 @@ dependencies:
     sdk: flutter
   flutter_bloc: ^8.0.1
   connectivity_plus: ^2.2.0
-  device_info_plus: ^3.2.1
   image_picker: ^0.8.4+9
   image_cropper: ^1.5.0
   dio: ^4.0.4
@@ -43,9 +42,10 @@ dependencies:
   google_sign_in: ^5.2.4
   package_info_plus: ^1.4.0
   shared_preferences: ^2.0.13
-  flutter_facebook_auth: ^4.1.2
+  flutter_facebook_auth: ^4.2.1
   firebase_database: ^9.0.9
   permission_handler: ^9.2.0
+  # TODO: sign_in_with_apple
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
