--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   firebase_database: ^9.0.9
   permission_handler: ^9.2.0
   # TODO: sign_in_with_apple
+  firebase_storage: ^10.2.12
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
