--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   permission_handler: ^9.2.0
   # TODO: sign_in_with_apple
   firebase_storage: ^10.2.12
+  file_picker: ^4.5.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
