--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.applify.components">
+    package="com.applify.flutter.library">
    <uses-permission android:name="android.permission.INTERNET"/>
    <queries>
         <provider android:authorities="com.facebook.katana.provider.PlatformProvider" />
