--- a/ios/Runner/GoogleService-Info.plist
+++ b/ios/Runner/GoogleService-Info.plist
@@ -3,9 +3,9 @@
 <plist version="1.0">
 <dict>
 	<key>CLIENT_ID</key>
-	<string>1069074406208-bguqeh1qeit9d1pv0dvvk3ro4bc64tj3.apps.googleusercontent.com</string>
+	<string>1069074406208-88vc6o76qin3noleo9b271v8oothfism.apps.googleusercontent.com</string>
 	<key>REVERSED_CLIENT_ID</key>
-	<string>com.googleusercontent.apps.1069074406208-bguqeh1qeit9d1pv0dvvk3ro4bc64tj3</string>
+	<string>com.googleusercontent.apps.1069074406208-88vc6o76qin3noleo9b271v8oothfism</string>
 	<key>ANDROID_CLIENT_ID</key>
 	<string>1069074406208-48r1vks6hku1g0s162st69cmc25erodc.apps.googleusercontent.com</string>
 	<key>API_KEY</key>
@@ -15,7 +15,7 @@
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>com.applify.components</string>
+	<string>com.applify.flutter.library</string>
 	<key>PROJECT_ID</key>
 	<string>demoapplication-f2e12</string>
 	<key>STORAGE_BUCKET</key>
@@ -31,7 +31,7 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:1069074406208:ios:0643c9477516b96cc538a5</string>
+	<string>1:1069074406208:ios:bb68ee317a5ac126c538a5</string>
 	<key>DATABASE_URL</key>
 	<string>https://demoapplication-f2e12-default-rtdb.firebaseio.com</string>
 </dict>
