--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,8 @@ dependencies:
   # TODO: sign_in_with_apple
   firebase_storage: ^10.2.12
   file_picker: ^4.5.1
+  path_provider: ^2.0.9
+  flutter_pdfview: ^1.2.2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
