--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   file_picker: ^4.5.1
   path_provider: ^2.0.9
   flutter_pdfview: ^1.2.2
+  week_of_year: ^2.0.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
