--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,7 +50,7 @@ dependencies:
   path_provider: ^2.0.9
   flutter_pdfview: ^1.2.2
   week_of_year: ^2.0.0
-
+  sign_in_with_apple: ^3.3.0
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
