--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -20,10 +20,48 @@
 	<string>$(FLUTTER_BUILD_NAME)</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>fb667938674322483</string>
+				<string>com.googleusercontent.apps.1069074406208-88vc6o76qin3noleo9b271v8oothfism</string>
+			</array>
+		</dict>
+	</array>
 	<key>CFBundleVersion</key>
 	<string>$(FLUTTER_BUILD_NUMBER)</string>
+	<key>FacebookAppID</key>
+	<string>667938674322483</string>
+	<key>FacebookClientToken</key>
+	<string>684d7b059b15c33ecc0874340262f3ac</string>
+	<key>FacebookDisplayName</key>
+	<string>Components</string>
+	<key>LSApplicationQueriesSchemes</key>
+	<array>
+		<string>fbapi</string>
+		<string>fb-messenger-share-api</string>
+		<string>fbauth2</string>
+		<string>fbshareextension</string>
+	</array>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSCameraUsageDescription</key>
+	<string>This app requires camera access to capture an image.</string>
+	<key>NSFileProviderDomainUsageDescription</key>
+	<string>This app requires file access to function properly.</string>
+	<key>NSLocalNetworkUsageDescription</key>
+	<string>This app requires local network for notifications</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>This app requires photo library access to select a picture.</string>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>fetch</string>
+		<string>remote-notification</string>
+	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
@@ -41,38 +79,5 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<true/>
-	<key>CFBundleURLTypes</key>
-	<array>
-		<dict>
-		<key>CFBundleTypeRole</key>
-		<string>Editor</string>
-		<key>CFBundleURLSchemes</key>
-		<array>
-			<string>fb667938674322483</string>
-			<string>com.googleusercontent.apps.1069074406208-88vc6o76qin3noleo9b271v8oothfism</string>
-		</array>
-		</dict>
-	</array>
-	<key>FacebookAppID</key>
-	<string>667938674322483</string>
-	<key>FacebookClientToken</key>
-	<string>684d7b059b15c33ecc0874340262f3ac</string>
-	<key>FacebookDisplayName</key>
-	<string>Components</string>
-	<key>LSApplicationQueriesSchemes</key>
-	<array>
-	  <string>fbapi</string>
-	  <string>fb-messenger-share-api</string>
-	  <string>fbauth2</string>
-	  <string>fbshareextension</string>
-	</array>
-	<key>NSCameraUsageDescription</key>
-	<string>This app requires camera access to capture an image.</string>
-	<key>NSFileProviderDomainUsageDescription</key>
-	<string>This app requires file access to function properly.</string>
-	<key>NSLocalNetworkUsageDescription</key>
-	<string>This app requires local network for notifications</string>
-	<key>NSPhotoLibraryUsageDescription</key>
-	<string>This app requires photo library access to select a picture.</string>
 </dict>
 </plist>
