chore: Rename app to `flutter_library`.

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -6,7 +6,7 @@
     </queries>
         
    <application
-        android:label="components"
+        android:label="flutter_library"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
