refactor: Minor refactoring changes.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: flutter_library
+name: components
 description: Collection of common functionalities.
 
 # The following line prevents the package from being accidentally published to
