--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,8 +55,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   flutter_local_notifications: ^9.5.2
-  video_player: ^2.4.2
-
+  better_player: ^0.0.82
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
